--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "postcss": "^8.4.31",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "vite": "^5.0.0"
+        "vite": "^5.0.0",
+        "vite-plugin-env-compatible": "^2.0.1"
     },
     "dependencies": {
         "@emotion/react": "^11.11.1",
