feat: collect request status and logistic information could change

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "buzz/laravel-google-captcha": "^2.3",
         "guzzlehttp/guzzle": "^7.2",
         "inertiajs/inertia-laravel": "^0.6.3",
+        "kongulov/interact-with-enum": "^1.0",
         "laravel/breeze": "^1.28",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
