--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
         "milon/barcode": "^10.0",
+        "ryangjchandler/laravel-cloudflare-turnstile": "^1.1",
         "spatie/laravel-permission": "^6.3",
         "tightenco/ziggy": "^1.0"
     },
