--- a/package.json
+++ b/package.json
@@ -28,12 +28,16 @@
         "@mui/material": "^5.14.18",
         "@mui/x-data-grid": "^6.18.7",
         "@mui/x-date-pickers": "^6.19.0",
+        "date-fns": "^3.6.0",
         "dayjs": "^1.11.10",
+        "framer-motion": "^12.11.0",
         "moment": "^2.30.1",
         "notistack": "^3.0.1",
         "prop-types": "^15.8.1",
+        "react-beautiful-dnd": "^13.1.1",
         "react-google-recaptcha": "^3.1.0",
         "react-mui-fileuploader": "^0.5.2",
+        "react-top-loading-bar": "^3.0.2",
         "react-transition-group": "^4.4.5",
         "swr": "^2.2.4",
         "validator": "^13.11.0"
