--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@mui/x-data-grid": "^6.18.7",
         "@mui/x-date-pickers": "^6.19.0",
         "date-fns": "^3.6.0",
+        "date-fns-tz": "^3.2.0",
         "dayjs": "^1.11.10",
         "framer-motion": "^12.11.0",
         "moment": "^2.30.1",
