--- a/package.json
+++ b/package.json
@@ -26,20 +26,24 @@
         "@mui/icons-material": "^5.16.10",
         "@mui/lab": "^5.0.0-alpha.177",
         "@mui/material": "^5.16.10",
+        "@mui/system": "^7.3.5",
         "@mui/x-data-grid": "^7.25.0",
         "@mui/x-date-pickers": "^7.25.0",
         "date-fns": "^4.1.0",
         "date-fns-tz": "^3.2.0",
         "dayjs": "^1.11.13",
         "framer-motion": "^12.13.2",
+        "leaflet": "^1.9.4",
         "moment": "^2.30.1",
         "notistack": "^3.0.1",
         "prop-types": "^15.8.1",
         "react-beautiful-dnd": "^13.1.1",
         "react-google-recaptcha": "^3.1.0",
+        "react-leaflet": "^4.2.1",
         "react-mui-fileuploader": "^0.5.2",
         "react-top-loading-bar": "^3.0.2",
         "react-transition-group": "^4.4.5",
+        "recharts": "^3.4.1",
         "swr": "^2.2.5",
         "validator": "^13.12.0"
     }
